--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,6 +39,7 @@ jobs:
         cuda: ["11.6-aarch64"]
         python: ["3.7", "3.8", "3.9", "3.10"]
 
+    steps:
     - name: Download Source
       uses: actions/download-artifact@v2
       with:
