--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,6 +58,7 @@ jobs:
 
   upload:
     runs-on: ubuntu-latest
+    needs: [build]
     steps:
     - name: Upload to GitHub Releases
       run: |
