--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,13 +46,13 @@ jobs:
       run: |
         tar xf source.tar.gz
         cd cupy-release-tools
-        # ./build.sh "${{ matrix.cuda }}" "${{ matrix.python }}"
-        echo ./build.sh "${{ matrix.cuda }}" "${{ matrix.python }}" > "cupy-${{ matrix.cuda }}-${{ matrix.python }}.whl"
+        #echo ./build.sh "${{ matrix.cuda }}" "${{ matrix.python }}" > "cupy-${{ matrix.cuda }}-${{ matrix.python }}.whl"
+        ./build.sh "${{ matrix.cuda }}" "${{ matrix.python }}"
 
     - name: Upload Artifact
       uses: actions/upload-artifact@v2
       with:
-        name: cupy-wheel
+        name: wheels
         path: cupy-release-tools/cupy-*.whl
         if-no-files-found: error
 
