--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,6 +37,7 @@ jobs:
   preflight:
     # Creates an source archive of cupy-release-tools and cupy repository for the target.
     runs-on: ubuntu-latest
+    name: Preflight
     steps:
     - name: Check Release Exists
       run: |
@@ -58,21 +59,6 @@ jobs:
         name: source
         path: source.tar.bz2
 
-  sdist-and-cuda-x64:
-    # Euqueues a build job on FlexCI and wait until it completes.
-    # Targets: sdist, cuda-linux-x64, cuda-windows-x64
-    runs-on: ubuntu-latest
-    needs: [preflight]
-    steps:
-    - name: Download Source
-      uses: actions/download-artifact@v2
-      with:
-        name: source
-    - name: Build & Upload
-      run: |
-        echo TODO - Enqueue FlexCI job to build sdist and upload to GitHub Releases
-        echo TODO - Wait until FlexCI job complete
-
   cuda-linux-aarch64:
     # Builds on Arm64 node.
     # Note that verification is not supported as CUDA is unavailable.
@@ -86,13 +72,19 @@ jobs:
       uses: actions/download-artifact@v2
       with:
         name: source
-    - name: Build & Upload
+    - name: Build
       run: |
         tar xf source.tar.bz2
         cd cupy-release-tools
         export CUPY_RELEASE_SKIP_VERIFY=1
-        ./build.sh "${{ matrix.cuda }}" "${{ matrix.python }}"
-        echo TODO - Upload to github releases
+        for PY in ${{ join(fromJSON(github.event.inputs.matrix_python), ' ') }}; do
+          ./build.sh "${{ matrix.cuda }}" "${PY}"
+        done
+    - name: Upload Wheels
+      uses: actions/upload-artifact@v2
+      with:
+        name: wheels
+        path: cupy-release-tools/*.whl
 
   rocm-linux-x64:
     # Builds on ROCm node.
@@ -110,8 +102,14 @@ jobs:
       run: |
         tar xf source.tar.bz2
         cd cupy-release-tools
-        ./build.sh "${{ matrix.cuda }}" "${{ matrix.python }}"
-        gh release --repo cupy/cupy upload "${{ github.event.inputs.release }}" cupy-*.whl
+        for PY in ${{ join(fromJSON(github.event.inputs.matrix_python), ' ') }}; do
+          ./build.sh "${{ matrix.cuda }}" "${PY}"
+        done
+    - name: Upload Wheels
+      uses: actions/upload-artifact@v2
+      with:
+        name: wheels
+        path: cupy-release-tools/*.whl
 
   postflight:
     # Verify that everything is ready.
@@ -121,3 +119,4 @@ jobs:
     - name: Verify
       run: |
         echo TODO - run verification tool
+        #gh release --repo cupy/cupy upload "${{ github.event.inputs.release }}" cupy-*.whl
