--- a/.github/workflows/build-v11.yml
+++ b/.github/workflows/build-v11.yml
@@ -8,8 +8,7 @@ on:
         required: true
         default: "master"
       release:
-        description: 'Release Target (tag, e.g., v11.0.0rc1)'
-        required: true
+        description: 'Release Target (tag, e.g., v11.0.0rc1) -- blank to skip upload'
         default: "v11.X.0"
       matrix_cuda_linux_aarch64:
         description: 'Matrix: CUDA (Linux/aarch64)'
@@ -27,11 +26,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Check Release Exists
+      if: github.event.inputs.release != ''
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         # Release (or Release Draft) must exist for the given release target.
-        gh release view --repo cupy/cupy "${{ github.event.inputs.release }}" || echo "TODO: tentatively ignoreing error"
+        gh release view --repo cupy/cupy "${{ github.event.inputs.release }}"
     - name: Prepare Source
       run: |
         git clone https://github.com/cupy/cupy-release-tools.git
@@ -42,14 +42,16 @@ jobs:
                 git checkout "${{ github.event.inputs.target }}"
             popd
         popd
+        echo "*** cupy: $(git -C cupy-release-tools/cupy show --summary --oneline)"
+        echo "*** cupy-release-tools: $(git -C cupy-release-tools show --summary --oneline)"
         tar cjf source.tar.bz2 --exclude-vcs cupy-release-tools
     - name: Artifact (Source)
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v3
       with:
         name: source
         path: source.tar.bz2
 
-  cuda-linux-aarch64:
+  build-cuda-linux-aarch64:
     # Builds on Arm64 node.
     # Note that verification is not supported as CUDA is unavailable.
     runs-on: [self-hosted, linux, arm64]
@@ -59,7 +61,7 @@ jobs:
         cuda: ${{ fromJSON(github.event.inputs.matrix_cuda_linux_aarch64) }}
     steps:
     - name: Download Source
-      uses: actions/download-artifact@v2
+      uses: actions/download-artifact@v3
       with:
         name: source
     - name: Build
@@ -73,20 +75,22 @@ jobs:
         export CUPY_RELEASE_SKIP_VERIFY=1
         echo "${{ join(fromJSON(github.event.inputs.matrix_python), ' ') }}" | xargs -n 1 -P 1 ./build.sh "${{ matrix.cuda }}"
     - name: Artifact (Wheel)
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v3
       with:
-        name: wheels
+        name: "wheels-${{ matrix.cuda }}"
         path: cupy-release-tools/*.whl
 
-  postflight:
+  upload:
     runs-on: ubuntu-latest
-    needs: [cuda-linux-aarch64]
+    needs: [build-cuda-linux-aarch64]
     steps:
-    - name: Download Wheels
-      uses: actions/download-artifact@v2
-      with:
-        name: wheels
+    - name: Download All Wheels
+      uses: actions/download-artifact@v3
+    - name: List All Wheels
+      run: |
+        find wheels-* -ls
     - name: Publish Wheels to GitHub Releases
+      if: github.event.inputs.release != ''
       run: |
         # TODO use token with write permission to cupy/cupy
-        gh release --repo cupy/cupy upload "${{ github.event.inputs.release }}" cupy-release-tools/cupy-*.whl
+        gh release --repo cupy/cupy upload "${{ github.event.inputs.release }}" wheels-*/cupy-*.whl
