--- a/.github/workflows/build-v11.yml
+++ b/.github/workflows/build-v11.yml
@@ -88,7 +88,7 @@ jobs:
       uses: actions/download-artifact@v3
     - name: List All Wheels
       run: |
-        find wheels-* -ls
+        find wheels-* -type f -ls
     - name: Publish Wheels to GitHub Releases
       if: github.event.inputs.release != 'skip'
       env:
