--- a/.github/workflows/build-v11.yml
+++ b/.github/workflows/build-v11.yml
@@ -50,7 +50,7 @@ jobs:
                 git checkout "${{ github.event.inputs.target }}"
             popd
         popd
-        cat << "_EOF_" >> "${GITHUB_STEP_SUMMARY}"
+        cat << _EOF_ >> "${GITHUB_STEP_SUMMARY}"
         # Commits
         **cupy**: $(git -C cupy-release-tools/cupy show --summary --oneline)
         **cupy-release-tools**: $(git -C cupy-release-tools show --summary --oneline)
