--- a/.github/workflows/build-v11.yml
+++ b/.github/workflows/build-v11.yml
@@ -51,7 +51,7 @@ jobs:
             popd
         popd
         cat << _EOF_ >> "${GITHUB_STEP_SUMMARY}"
-        # Commits
+        # Build Target
         **cupy**: \`$(git -C cupy-release-tools/cupy show --summary --oneline)\`
         **cupy-release-tools**: \`$(git -C cupy-release-tools show --summary --oneline)\`
         _EOF_
