--- a/.github/workflows/build-v11.yml
+++ b/.github/workflows/build-v11.yml
@@ -62,9 +62,7 @@ jobs:
         name: source
         path: source.tar.bz2
 
-  build-cuda-linux-aarch64:
-    # Builds on self-hosted aarch64 node.
-    # Note that verification is not performed as CUDA is unavailable.
+  prep-build-cuda-linux-aarch64:
     runs-on: [self-hosted, linux, arm64]
     needs: [preflight]
     strategy:
@@ -75,20 +73,43 @@ jobs:
       uses: actions/download-artifact@v3
       with:
         name: source
+    - name: Login to DockerHub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+    - name: Generate Builder/Verifier Docker Images
+      run: |
+        tar xf source.tar.bz2
+        cd cupy-release-tools
+        # Any version of Python version is fine, the image will have all supported Python versions.
+        ./dist.py --action build --target wheel-linux --cuda "${{ matrix.cuda }}" --python 3.10 --source cupy --dry-run --push
+        ./dist.py --action verify --target wheel-linux --cuda "${{ matrix.cuda }}" --python 3.10 --dist /dev/null --test release-tests --dry-run --push
+
+  build-cuda-linux-aarch64:
+    # Builds on self-hosted aarch64 node.
+    # Note that verification is not performed as CUDA is unavailable.
+    runs-on: [self-hosted, linux, arm64]
+    needs: [prep-build-cuda-linux-aarch64]
+    strategy:
+      matrix:
+        cuda: ${{ fromJSON(github.event.inputs.matrix_cuda_linux_aarch64) }}
+        python: ${{ fromJSON(github.event.inputs.matrix_python) }}
+    steps:
+    - name: Download Source
+      uses: actions/download-artifact@v3
+      with:
+        name: source
     - name: Build
       run: |
         tar xf source.tar.bz2
         cd cupy-release-tools
-        # Prepare builder/verifier Docker images
-        #./dist.py --action build --target wheel-linux --cuda "${{ matrix.cuda }}" --python 3.10 --source cupy --dry-run
-        #./dist.py --action verify --target wheel-linux --cuda "${{ matrix.cuda }}" --python 3.10 --dist /dev/null --test release-tests --dry-run
-
         export CUPY_RELEASE_SKIP_VERIFY=1
-        echo "${{ join(fromJSON(github.event.inputs.matrix_python), ' ') }}" | xargs -n 1 -P 1 ./build.sh "${{ matrix.cuda }}"
+        ./build.sh "${{ matrix.cuda }}" "${{ matrix.python }}"
     - name: Artifact (Wheel)
       uses: actions/upload-artifact@v3
       with:
-        name: "wheels-${{ matrix.cuda }}"
+        name: "wheel-${{ matrix.cuda }}-${{ matrix.python }}"
         path: cupy-release-tools/*.whl
 
   upload:
@@ -99,10 +120,10 @@ jobs:
       uses: actions/download-artifact@v3
     - name: List All Wheels
       run: |
-        find wheels-* -type f -ls
+        find wheel-* -type f -ls
     - name: Publish Wheels to GitHub Releases
       if: github.event.inputs.release != 'skip'
       env:
         GITHUB_TOKEN: ${{ secrets.CUPY_WHEEL_UPLOAD_TOKEN }}
       run: |
-        gh release --repo cupy/cupy upload "${{ github.event.inputs.release }}" wheels-*/cupy_*.whl
+        gh release --repo cupy/cupy upload "${{ github.event.inputs.release }}" wheel-*/cupy_*.whl
