--- a/.github/workflows/build-v11.yml
+++ b/.github/workflows/build-v11.yml
@@ -56,8 +56,8 @@ jobs:
         popd
         cat << _EOF_ >> "${GITHUB_STEP_SUMMARY}"
         ## Source
-        **cupy**: \`$(git -C cupy-release-tools/cupy show --summary --oneline)\`
-        **cupy-release-tools**: \`$(git -C cupy-release-tools show --summary --oneline)\`
+        **cupy**: $(git -C cupy-release-tools/cupy show --summary --oneline)
+        **cupy-release-tools**: $(git -C cupy-release-tools show --summary --oneline)
         _EOF_
         tar cjf source.tar.bz2 --exclude-vcs cupy-release-tools
     - name: Artifact (Source)
