--- a/.github/workflows/build-v11.yml
+++ b/.github/workflows/build-v11.yml
@@ -12,7 +12,7 @@ on:
         required: true
         default: "master"
       release:
-        description: 'Release Target (tag, e.g., v11.0.0rc1) -- `skip` to skip upload'
+        description: 'Release Target (draft/tag, e.g., v11.0.0rc1) -- `skip` to skip upload'
         default: "v11.X.0"
       matrix_cuda_linux_aarch64:
         description: 'Matrix: CUDA (Linux/aarch64)'
